--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       server:
         git:
           uri: https://github.com/yourwafer/spring-cloud-demo.git
-        searchPaths: config-resource
+          searchPaths: ./config-resource
 server:
   port: 7001
 # git管理配置
@@ -14,3 +14,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:1111/eureka/
+debug: false
