--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -3,7 +3,9 @@ spring:
     name: eureka-server
 server:
   port: 1111
-
+management:
+  security:
+    enabled: false
 eureka:
   instance:
     hostname: localhost
