--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ include 'eureka-client'
 include 'eureka-server'
 include 'config-server'
 include 'config-client'
+include 'config-server-monitor'
 
