--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'eureka-server'
 include 'config-server'
 include 'config-client'
 include 'config-server-monitor'
+include 'ribbon-consumer'
 
