--- a/eureka-client/src/main/resources/application-peer.yml
+++ b/eureka-client/src/main/resources/application-peer.yml
@@ -4,9 +4,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone:
-        - http://localhost:1111/eureka/
-        - http://localhost:1112/eureka/
+      defaultZone: http://localhost:1111/eureka/,http://localhost:1112/eureka/
   instance:
     home-page-url: http://localhost:8080
     health-check-url: http://localhost:8080
