--- a/ribbon-consumer/build.gradle
+++ b/ribbon-consumer/build.gradle
@@ -21,4 +21,6 @@ dependencies {
 
     compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-ribbon', version: '1.3.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.3.1.RELEASE'
+
 }
