添加网关路由功能

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,4 @@ include 'config-client'
 include 'config-server-monitor'
 include 'ribbon-consumer'
 include 'feign-consumer'
-
+include 'zuul-center'
