--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -16,6 +16,7 @@ dependencyManagement {
 }
 
 dependencies {
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
     compile 'org.springframework.cloud:spring-cloud-starter-config:1.3.1.RELEASE'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-config-server', version: '1.3.1.RELEASE'
 }
