--- a/config-client/build.gradle
+++ b/config-client/build.gradle
@@ -16,6 +16,7 @@ dependencyManagement {
 }
 
 dependencies {
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-actuator', version: '1.5.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.3.RELEASE'
 
