--- a/cloud-bus/build.gradle
+++ b/cloud-bus/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.3.RELEASE'
 
     compile 'org.springframework.cloud:spring-cloud-starter-config:1.3.1.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '1.5.3.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '1.3.1.RELEASE'
 }
