--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: eureka-client-1
+  zipkin:
+    base-url: http://localhost:8888
 eureka:
   client:
     serviceUrl:
