--- a/eureka-client/build.gradle
+++ b/eureka-client/build.gradle
@@ -20,6 +20,9 @@ dependencyManagement {
 }
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-actuator', version: '1.5.3.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '1.2.1.RELEASE'
 
     compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '1.2.1.RELEASE'
+
 }
