--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -9,12 +9,13 @@ management:
 eureka:
   server:
     eviction-interval-timer-in-ms: 60000
+    renewalPercentThreshold: 0.49
 #    enable-self-preservation: false
   instance:
     hostname: localhost
   client:
     healthcheck: true
     register-with-eureka: true
-    fetch-registry: false
+    fetch-registry: true
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
