--- a/ribbon-consumer/build.gradle
+++ b/ribbon-consumer/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-ribbon', version: '1.3.1.RELEASE'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.3.1.RELEASE'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version: '1.3.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '1.2.1.RELEASE'
 
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '1.2.1.RELEASE'
 }
