--- a/ribbon-consumer/src/main/resources/application.yml
+++ b/ribbon-consumer/src/main/resources/application.yml
@@ -7,7 +7,14 @@ management:
 spring:
   application:
     name: ribbon-consumer
+  zipkin:
+    base-url: http://localhost:8888
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:1111/eureka/
+hystrix:
+  command:
+    default:
+      circuitBreaker:
+        requestVolumeThreshold: 5
